src/processing/snapshots/bevy_state_plugin_generator__processing__tests__apply_naming_scheme@single_node_Short.snap
---
source: src/processing/tests.rs
expression: "nodes.into_iter().map(|node|\nformat!(\"{} -> {}\", node.name, node.resolved_name.unwrap())).collect_vec()"
---
[
    "RootState -> RootState",
]
